# IAT_patcher

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.sh  iatp_autobuild.sh  index.html  params.json
patcher/: CMakeLists.txt  ExeController.cpp  ExeController.h  ExeHandler.cpp  ExeHandler.h  ExeHandlerLoader.cpp  ExeHandlerLoader.h  Executables.cpp  Executables.h  FileLoader.cpp  FileLoader.h  FuncReplacements.cpp  FuncReplacements.h  FunctionsMap.cpp  FunctionsMap.h  HookManager.cpp  HookManager.h  IAT_Patcher.rc  ImportsLookup.cpp  ImportsLookup.h  ImportsTableModel.cpp  ImportsTableModel.h  InfoTableModel.cpp  InfoTableModel.h  README.md  ReplacementsDialog.cpp  ReplacementsDialog.h  Stub.cpp  Stub.h  Stub32.cpp  Stub32.h  Stub64.cpp  Stub64.h  Stub64Data.h  StubMaker.cpp  StubMaker.h  application.qrc  main.cpp  mainwindow.cpp  mainwindow.h  (+3 more)
patcher/dllparse/: FunctionsModel.cpp  FunctionsModel.h  LibraryInfo.cpp  LibraryInfo.h  LibraryParser.cpp  LibraryParser.h  LibsModel.cpp  LibsModel.h
patcher/stub/: Stub.cpp  Stub.h  Stub32.cpp  Stub32.h  Stub32Data.h  Stub64.cpp  Stub64.h  Stub64Data.h
stub/: hexf.cpp  stub32.asm  stub64.asm
stylesheets/: stylesheet.css
